# zendesk_support_apps_tutorial

./: README.md
client_side_app/: .zat  README.md  manifest.json
client_side_app/assets/: iframe.html  main.js
server_side_app/: README.md
server_side_app/app_local/: .zat  manifest.json
server_side_app/app_remote/: app.py  pyproject.toml
server_side_app/app_remote/templates/: list_tasks.html  start.html
